fix authorsAllStyleMap() method